compiler/testData/cli/jvm/nestedTypeAliasesError.out
compiler/testData/cli/jvm/nestedTypeAliases.kt:4:5: error: nested and local type aliases are not supported.
    typealias TA = A
    ^^^^^^^^^^^^^^^^
COMPILATION_ERROR
